# vision-forge

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-min.txt  requirements-train.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: centernet_shapes_train_log.jsonl
examples/: infer_image.py  run_demo.py
scripts/: export_centernet_onnx.py  scale_up_voc_colab.py  train_centernet.py
tests/: conftest.py  test_api.py  test_backends_normalize.py  test_centernet_infer.py  test_centernet_metrics.py  test_centernet_model.py  test_centernet_targets.py  test_cli.py  test_db.py  test_draw.py  test_draw_render.py  test_encoding.py  test_hf_backend.py  test_manager_config.py  test_misc_coverage.py  test_onnx_postprocess.py  test_pipeline_video.py  test_reliability.py  test_schema.py  test_security.py  test_worker.py
visionforge/: __init__.py  cli.py  config.py  errors.py  pipeline.py  reliability.py
visionforge/api/: __init__.py  deps.py  encoding.py  middleware.py  server.py
visionforge/api/web/: app.js  index.html  style.css
visionforge/core/: __init__.py  draw.py  schema.py  video.py
visionforge/db/: __init__.py  models.py  repository.py  session.py
visionforge/models/: __init__.py  hf_backend.py  manager.py  onnx_backend.py  registry.py  yolo_backend.py
visionforge/models/centernet/: __init__.py  dataset.py  engine.py  export.py  infer.py  losses.py  metrics.py  model.py  postprocess.py  targets.py
visionforge/observability/: __init__.py  logging.py  metrics.py
visionforge/security/: __init__.py  auth.py  ratelimit.py  validation.py
visionforge/worker/: __init__.py  arq_worker.py  jobs.py
