[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-forge"
version = "0.1.0"
description = "Real-time, multi-task computer vision platform (detection, segmentation, pose, tracking, classification)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = [
    "computer-vision",
    "object-detection",
    "segmentation",
    "pose-estimation",
    "tracking",
    "yolo",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "numpy>=1.24,<3.0",
    "pillow>=10.2",
]

[project.optional-dependencies]
# Real inference engines (heavy).
ml = [
    "torch>=2.1",
    "ultralytics>=8.1",
    "transformers>=4.38",
    "opencv-python-headless>=4.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/vision-forge"
Repository = "https://github.com/OCT0PUSPR/vision-forge"
Issues = "https://github.com/OCT0PUSPR/vision-forge/issues"

[project.scripts]
visionforge = "visionforge.cli:main"

[tool.setuptools.packages.find]
include = ["visionforge*"]

[tool.setuptools.package-data]
"visionforge.api.web" = ["*.html", "*.css", "*.js"]

# NOTE: the standalone ruff.toml at the repo root is authoritative for linting.
# This block is kept aligned with it for tooling that reads pyproject directly.
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Intentionally exclude the UP (pyupgrade) family: this codebase targets
# Python 3.9, so Optional[X] / List[...] typing is correct, not a violation.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
