[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-forge"
version = "0.1.0"
description = "Real-time, multi-task computer vision platform (detection, segmentation, pose, tracking, classification)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = [
    "computer-vision",
    "object-detection",
    "segmentation",
    "pose-estimation",
    "tracking",
    "yolo",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "numpy>=1.24,<3.0",
    "pillow>=10.2",
    "sqlalchemy>=2.0,<3.0",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "slowapi>=0.1.9",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# Real inference engines (heavy). 'onnx' is the torch-free deployment path.
ml = [
    "torch>=2.1",
    "ultralytics>=8.1",
    "transformers>=4.38",
    "opencv-python-headless>=4.9",
]
onnx = [
    "onnxruntime>=1.17",
    "opencv-python-headless>=4.9",
]
# Persistence migrations + object storage + distributed queue.
infra = [
    "alembic>=1.13",
    "boto3>=1.34",
    "arq>=0.25",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "fakeredis>=2.20",
    "httpx>=0.27",
    "locust>=2.20",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/vision-forge"
Repository = "https://github.com/OCT0PUSPR/vision-forge"
Issues = "https://github.com/OCT0PUSPR/vision-forge/issues"

[project.scripts]
visionforge = "visionforge.cli:main"

[tool.setuptools.packages.find]
include = ["visionforge*"]

[tool.setuptools.package-data]
"visionforge.api.web" = ["*.html", "*.css", "*.js"]

# NOTE: the standalone ruff.toml at the repo root is authoritative for linting.
# This block is kept aligned with it for tooling that reads pyproject directly.
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Intentionally exclude the UP (pyupgrade) family: this codebase targets
# Python 3.9, so Optional[X] / List[...] typing is correct, not a violation.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["visionforge"]
omit = [
    "visionforge/worker/arq_worker.py",
    # The from-scratch CenterNet's torch-only modules are covered by the
    # dedicated `ml-tests` CI job (torch CPU), NOT the light/green path, so they
    # are omitted from the light-path coverage gate. Their torch-free pieces
    # (targets.py, metrics.py) ARE measured here. The torch tests still run and
    # pass locally / on the ml-tests job — see tests/test_centernet_*.py.
    "visionforge/models/centernet/model.py",
    "visionforge/models/centernet/losses.py",
    "visionforge/models/centernet/postprocess.py",
    "visionforge/models/centernet/dataset.py",
    "visionforge/models/centernet/engine.py",
    "visionforge/models/centernet/infer.py",
    "visionforge/models/centernet/export.py",
]

[tool.coverage.report]
# CI gate: fail under 80% on the core package.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["tests/", "examples/", "build/"]

# Third-party libs without type stubs in our minimal env.
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "torch.*",
    "ultralytics.*",
    "onnxruntime.*",
    "transformers.*",
    "slowapi.*",
    "arq.*",
    "boto3.*",
    "structlog.*",
    "prometheus_client.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "examples", "alembic"]
# B104: binding to 0.0.0.0 is intentional for a containerized service.
# B101: assert statements are used only for internal type-narrowing invariants,
#       never for security checks or untrusted-input validation.
# B614: torch.load is called only on first-party checkpoints produced by this
#       repo's own training scripts (trusted artifacts), never on untrusted
#       uploads; weights_only=False is required to restore the config payload.
skips = ["B104", "B101", "B614"]
